--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -50,7 +50,7 @@
 
     <script id="x" type="text/x-handlebars-template">
         <div class="container-list heading" id="hotelnm">
-            <h1>{{ hotelname }}</h1>
+            <h1 class="underline-text">{{ hotelname }}</h1>
         </div>
     </script>
     <div id="roomList-container">
@@ -58,7 +58,7 @@
 
     <script id="room-item" type="text/x-handlebars-template">
         {{#each this}}
-        <div style="border:solid 1px gray;margin-bottom:10px" class="container container-list">
+        <div class="container container-list border-panel">
             <div class="col-md-12">
                 <section>
                     <!--Image-->
@@ -69,18 +69,18 @@
                 <section>
                     <!--Room Details-->
                     <div class="col-md-6">
-                        <h3 class="space"><span class="glyphicon glyphicon-bed orange"></span> <b>{{roomtype}}</b></h3>
-                        <h4 class="space"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
-                        <h4 class="space"><span class="glyphicon glyphicon-hand-right green"></span> {{description}}</h4>
+                        <h3 class="space bold-text"><span class="glyphicon glyphicon-bed orange"></span> {{roomtype}}</h3>
+                        <h4 class="space"><span class="glyphicon glyphicon-map-marker green"></span>  {{address}}</h4>
+                        <h4 class="underline-text"><span class="glyphicon glyphicon-paperclip green"></span> {{{description}}}</h4>
                     </div>
-                </section>
+                </section>	
                 <section>
                     <!--View Rooms Button-->
                     <div class="col-md-2 ">
                         <!-- item -->
                         <div class="panel panel-pricing">
                             <div class="panel-heading text-center">
-                                <h4><u>Starting From</u></h4>
+                                <h4 class="underline-text">Starting From</h4>
                             </div>
                             <div class="panel-body text-center">
                                 <p class="p-price">$ {{price}}</p>
