--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -49,7 +49,7 @@
     </div>
 
     <script id="x" type="text/x-handlebars-template">
-        <div class="container-list heading" id="hotelnm">
+        <div class="container heading text-center" id="hotelnm">
             <h1 class="underline-text">{{ hotelname }}</h1>
         </div>
     </script>
@@ -96,7 +96,6 @@
         {{/each}}
 
     </script>
-
     <script src="/Js/roomListingScript.js"></script>
 </body>
 </html>
