--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
@@ -38,7 +38,7 @@
         </nav>
     </div>
 
-    <div id="hotelList-container">
+    <div id="priceList-container">
         <div class="col-md-12">
             <div class="col-md-offset-6">
                 <img src="/Image/circlepreloader.gif" alt="Loading.." />
@@ -46,12 +46,13 @@
         </div>
     </div>
 
-    <div id="hotelList-container">
+    <div id="priceList-container">
     </div>
-    <div class="container container-list">
-        <script id="hotel-item" type="text/x-handlebars-template">
+           <script id="price-item" type="text/x-handlebars-template">
+               <div class="heading">
+               </div>
             {{#each this}}
-            <div class="container heading container-list border-panel">
+            <div class="container container-list border-panel heading">
                 <div class="col-md-12">
                     <section>
                         <!--View Details-->
@@ -61,8 +62,10 @@
                                     <h3 class="underline-text">Booking Details</h3>
                                 </div>
                                 <div class="panel-body">
-                                    <p class="panel-font"><span class="glyphicon glyphicon-arrow-right green"></span> <b>{{checkin}}</b><span class="glyphicon glyphicon-arrow-left green"></span> <b>{{checkout}}</b></p>
-                                    <p class="panel-font"><span class="glyphicon glyphicon-arrow-left green"></span> <b>{{hotelName}}</b></p>
+                                    <p class="panel-font"><span class="underline-text"></span> <b>{{hotelName}}</b></p>
+                                    <p class="panel-font"><span class="glyphicon glyphicon-bed green"></span> <b>{{roomtype}}</b></p>
+                                    <p class="panel-font"><span class="glyphicon glyphicon-arrow-right green"></span> <b>{{checkin}}</b></p>
+                                    <p class="panel-font"><span class="glyphicon glyphicon-arrow-left green"></span> <b>{{checkout}}</b></p>
                                     <p class="panel-font"><span class="glyphicon glyphicon-map-marker green"></span>  <b>{{address}}</b></p>
                                 </div>
                             </div>
@@ -71,23 +74,21 @@
 
                     <section>
                         <div class="col-md-4 ">
-                           <div>
-                            <ul class="price ">
-                                <li class="header">Total Amount Payable</li>
-                                <li class="grey panel-font">$ {{totalPrice}}</li>
-                                <li><button name="proceedBtn" id="proceedButton" onClick="paymentPage()" class="button">Proceed</button></li>
-                            </ul>
-                               </div>
+                            <div class="heading-panel"></div>
+                            <div>
+                                <ul class="price ">
+                                    <li class="header">Total Amount Payable</li>
+                                    <li class="grey panel-font">$ {{totalPrice}}</li>
+                                    <li><button name="proceedBtn" id="proceedButton" onClick="paymentPage()" class="button">Proceed</button></li>
+                                </ul>
                             </div>
+                        </div>
                     </section>
-                    <div>
-                    </div>
                 </div>
-                {{/each}}
+            </div>
+            {{/each}}
         </script>
-    </div>
-
-    <footer class="foot">Tavisca &copy; 2017|<a class="anchorLink" href="http://www.tavisca.com/">Open Company Website</a></footer>
+       <footer class="foot">Tavisca &copy; 2017|<a class="anchorLink" href="http://www.tavisca.com/">Open Company Website</a></footer>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <script src="/Js/pricingScript.js" type=""></script>
