--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -150,7 +150,7 @@
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label for="cvv">CVV</label>
-                                        <input type="text" class="form-control placeholderfont" id="cvv" placeholder="***">
+                                        <input type="password" class="form-control placeholderfont" id="cvv" placeholder="***">
                                     </div>
                                 </div>
                             </section>
@@ -166,7 +166,6 @@
                             <section>
                                 <div class="col-md-8">
                                     <button type="submit" class="panelButton" id="paynowButton">Pay Now</button>
-
                                 </div>
                             </section>
                         </div>
