added functionality for postpaid supplier

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -87,7 +87,7 @@
                                 <p class="p-price">$ {{price}}</p>
                             </div>
                             <div class="panel-body text-center">
-                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="roomPrice(this)">Book Now</button>
+                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="price(this)">Book Now</button>
                             </div>
                         </div>
                     </div>
