--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -77,7 +77,7 @@
                             <!--Age-->
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="age">Country</label>
+                                    <label for="age">Age</label>
                                     <input type="text" class="form-control placeholderfont" id="age" name="age" placeholder="Age">
                                 </div>
                             </div>
