validation on ui

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -52,14 +52,14 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="firstName">First Name</label>
-                                            <input type="text" class="form-control placeholderfont" id="firstName" name="firstname" placeholder="First Name">
+                                            <input type="text" class="form-control placeholderfont" id="firstName" name="firstname" placeholder="First Name" required>
                                         </div>
                                     </div>
                                     <!--Last Name-->
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="lastName">Last Name</label>
-                                            <input type="text" class="form-control placeholderfont" id="lastName" name="lastname" placeholder="Last Name">
+                                            <input type="text" class="form-control placeholderfont" id="lastName" name="lastname" placeholder="Last Name" required>
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +70,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="mobileNumber">Mobile Number</label>
-                                    <input type="text" class="form-control placeholderfont" id="mobileNumber" name="mobilenumber" placeholder="Mobile Number">
+                                    <input type="text" class="form-control placeholderfont" id="mobileNumber" name="mobilenumber" placeholder="Mobile Number" required>
                                 </div>
                             </div>
 
@@ -78,7 +78,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="age">Age</label>
-                                    <input type="text" class="form-control placeholderfont" id="age" name="age" placeholder="Age">
+                                    <input type="text" class="form-control placeholderfont" id="age" name="age" placeholder="Age" required>
                                 </div>
                             </div>
                         </section>
@@ -87,7 +87,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="emailId">Email-Id</label>
-                                    <input type="text" class="form-control placeholderfont" id="emailId" name="emailid" placeholder="Example:abc@gmail.com">
+                                    <input type="text" class="form-control placeholderfont" id="emailId" name="emailid" placeholder="Example:abc@gmail.com" required>
                                 </div>
                             </div>
                         </section>
@@ -110,7 +110,7 @@
                             <section>
                                 <div class="col-md-8">
                                     <label for="cardNumber">Card Number</label>
-                                    <input type="text" class="form-control placeholderfont" id="cardNumber" placeholder="Card Number">
+                                    <input type="text" class="form-control placeholderfont" id="cardNumber" placeholder="Card Number" required>
                                 </div>
 
                             </section>
@@ -119,7 +119,7 @@
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label for="cardHolder">Card Holder</label>
-                                        <input type="text" class="form-control placeholderfont" id="cardHolder" placeholder=" Card Holder's Name">
+                                        <input type="text" class="form-control placeholderfont" id="cardHolder" placeholder=" Card Holder's Name" required>
                                     </div>
                                 </div>
                             </section>
@@ -133,13 +133,13 @@
                                     <!--MM-->
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <input type="text" class="form-control placeholderfont" id="month" placeholder="MM">
+                                            <input type="text" class="form-control placeholderfont" id="month" placeholder="MM" required>
                                         </div>
                                     </div>
                                     <!--YY-->
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <input type="text" class="form-control placeholderfont" id="year" placeholder="YY">
+                                            <input type="text" class="form-control placeholderfont" id="year" placeholder="YYYY" required>
                                         </div>
 
                                     </div>
@@ -150,7 +150,7 @@
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label for="cvv">CVV</label>
-                                        <input type="password" class="form-control placeholderfont" id="cvv" placeholder="***">
+                                        <input type="password" class="form-control placeholderfont" id="cvv" placeholder="***" required>
                                     </div>
                                 </div>
                             </section>
