--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
@@ -53,7 +53,7 @@
                                                 <label for="place">Going To</label>
                                                 <div class="inner-addon left-addon">
                                                     <i class="glyphicon glyphicon-search black"></i>
-                                                    <input type="text" class="form-control placeholderfont" name="goingTo" id="place" placeholder="City,Landmark,Address,Station Name,Hotel Name..">
+                                                    <input type="text" class="form-control placeholderfont" name="goingTo" id="place" placeholder="City,Landmark,Address,Station Name,Hotel Name.." required>
                                                 </div>
                                             </div>
                                         </div>
