--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -38,7 +38,7 @@
 
     <div id="hotelList-container">
         <div class="col-md-12">
-            <div class="col-md-offset-6">
+            <div class="col-md-offset-6 preloader-img">
                 <img src="/Image/circlepreloader.gif" alt="Loading.." />
             </div>
         </div>
@@ -47,10 +47,9 @@
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
         <div class=" container heading text-center">
-            <h1>Available Hotels</h1>
+            <h1>Search Results</h1>
         </div>
         {{#each this}}
-
         <div class="container container-list border-panel">
 
             <div class="col-md-12">
@@ -83,6 +82,7 @@
         </div>
         {{/each}}
     </script>
+    
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <script src="/Js/hotelListingScript.js"></script>
