--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -42,7 +42,7 @@
 
     <div id="roomList-container">
         <div class="col-md-12">
-            <div class="col-md-offset-5">
+            <div class="col-md-offset-6 preloader-img">
                 <img src="/Image/circlepreloader.gif" alt="Loading.." />
             </div>
         </div>
